DTO's refactor