@@ -1,9 +1,10 @@
 package it.unicam.cs.pawm.exchangeappbackend.controllers;
 
 
-import it.unicam.cs.pawm.exchangeappbackend.dto.ItemDto;
+import it.unicam.cs.pawm.exchangeappbackend.dto.ImageCreationDTO;
+import it.unicam.cs.pawm.exchangeappbackend.dto.ItemCreationDTO;
+import it.unicam.cs.pawm.exchangeappbackend.dto.ItemDTO;
 import it.unicam.cs.pawm.exchangeappbackend.entities.Item;
-import it.unicam.cs.pawm.exchangeappbackend.entities.ItemImage;
 import it.unicam.cs.pawm.exchangeappbackend.mappers.ImageMapper;
 import it.unicam.cs.pawm.exchangeappbackend.mappers.ItemMapper;
 import it.unicam.cs.pawm.exchangeappbackend.services.ItemService;
@@ -11,6 +12,7 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
+
 import java.io.IOException;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -21,12 +23,10 @@ import java.util.stream.Collectors;
 public class ItemController {
     private final ItemService itemService;
     private final ItemMapper itemMapper;
-    private final ImageMapper imageMapper;
 
     public ItemController(ItemService itemService, ItemMapper itemMapper, ImageMapper imageMapper) {
         this.itemService = itemService;
         this.itemMapper = itemMapper;
-        this.imageMapper = imageMapper;
     }
 
     @PostMapping(value = "/add", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
@@ -34,25 +34,29 @@ public class ItemController {
                                           @RequestParam(name = "description") String description,
                                           @RequestParam(name = "category") String category,
                                           @RequestParam(name = "images") List<MultipartFile> images) {
-        ItemDto itemDto = new ItemDto(name, description, category);
-        Item newItem = itemMapper.toItemEntity(itemDto);
 
-        List<ItemImage> itemImages = images.stream()
-            .map(imageFile -> {
-                try {
-                    return imageMapper.toImageEntity(imageFile);
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
-                }
-            })
-            .peek(i -> i.setItem(newItem))
-            .collect(Collectors.toList());
+        List<ImageCreationDTO> imagesDto = images.stream().map(i -> {
+            try {
+                return new ImageCreationDTO(i.getBytes());
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }).toList();
 
-        newItem.setItemImages(itemImages);
+        ItemCreationDTO itemCreationDTO = new ItemCreationDTO(name, description, category, imagesDto);
+        Item newItem = itemMapper.toCreateEntity(itemCreationDTO);
 
         if (itemService.addItem(newItem))
-            return ResponseEntity.ok().body("New item added: " + itemDto.getName());
-        return ResponseEntity.badRequest().body("Item already present: " + itemDto.getName());
+            return ResponseEntity.ok().body("New item added: " + itemCreationDTO.name());
+        return ResponseEntity.badRequest().body("Item already present: " + itemCreationDTO.name());
+    }
+
+    @GetMapping("/user-items")
+    public List<ItemDTO> getUserItems() {
+        return itemService.getUserItems()
+            .stream()
+            .map(itemMapper::toItemDto)
+            .collect(Collectors.toList());
     }
 
 }
